Removed Minor errors

--- a/Week2/week2.ipynb
+++ b/Week2/week2.ipynb
@@ -13,7 +13,11 @@
     "\n",
     "Feel free to use your own MDPs, or import them from the OpenAI Gym library.\n",
     "\n",
-    "You can start this assignment during/after reading Grokking Ch-3."
+    "You can start this assignment during/after reading Grokking Ch-3.\n",
+    "\n",
+    "For this you have to install gymnasium, which is an API standard for reinforcement learning with a diverse collection of reference environments. This can be easily done by running:\n",
+    "\n",
+    "    pip install gymnasium"
    ]
   },
   {
@@ -22,9 +26,7 @@
    "source": [
     "## Frozen Lake\n",
     "\n",
-    "Let's now try to solve the Frozen Lake environment for some cases\n",
-    "\n",
-    "To align with Grokking, let us consider an unusual $\\gamma = 1$."
+    "Let's now try to solve the Frozen Lake environment for some cases"
    ]
   },
   {
@@ -191,9 +193,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env2 = gym.make('FrozenLake-v1',desc=generate_random_map(size=4))\n",
-    "env2 = env2.unwrapped\n",
-    "mdp2 = env2.P"
+    "#Function to print the policy you got after running the policy iteration or value iteration on the 4x4 FrozenLake environment\n",
+    "def print_policy(policy, env):\n",
+    "    \"\"\"\n",
+    "    Prints the policy for the 4x4 FrozenLake environment in a grid layout.\n",
+    "    \"\"\"\n",
+    "    action_symbols = {0: '←', 1: '↓', 2: '→', 3: '↑'}  #action symbols\n",
+    "    grid_size = env.desc.shape  #get the grid dimensions (e.g., 4x4)\n",
+    "    \n",
+    "    policy_symbols = np.array([action_symbols[action] for cell,action in policy.items()])\n",
+    "    policy_grid = policy_symbols.reshape(grid_size)  #reshape into a grid\n",
+    "\n",
+    "    print(\"Policy Grid:\")\n",
+    "    for row in policy_grid:\n",
+    "        print(\" \".join(row))\n"
    ]
   },
   {
@@ -202,8 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi1, val1, count1 = policy_iteration(mdp2)\n",
-    "pi2, val2, count2 = value_iteration(mdp2)"
+    "pi1, val1, count1 = policy_iteration(mdp)\n",
+    "pi2, val2, count2 = value_iteration(mdp)\n"
    ]
   },
   {
@@ -221,7 +234,7 @@
    "source": [
     "def test_policy(pi, env, goalstate):\n",
     "    # Complete this function to test the policy\n",
-    "    return"
+    "    return\n"
    ]
   }
  ],
