--- a/Week3/week3 (multi-armed bandits).ipynb
+++ b/Week3/week3 (multi-armed bandits).ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "    def pull(self, arm:int) -> int:\n",
     "        assert arm in np.arange(0, len(self.arms)), \"Action undefined for bandit\"\n",
     "        reward = 1 if np.random.random() < self.arms[arm] else 0\n",
-    "        self.cumulative_regret_array.append(self.cumulative_regret_array[-1] + self.best_arm - reward)\n",
+    "        self.cumulative_regret_array.append(self.cumulative_regret_array[-1] + self.best_arm - self.arms[arm])\n",
     "        return reward\n",
     "    \n",
     "    def plot_cumulative_regret(self):\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +138,6 @@
     "           random_arm = np.random.choice(len(self.bandit.arms))\n",
     "           reward =  self.bandit.pull(random_arm)\n",
     "           self.reinforce(reward, random_arm)\n",
-    "           self.count_memory[random_arm] += 1\n",
-    "           self.reward_memory[random_arm] += reward\n",
     "        else: # Choose best known action!\n",
     "           best_arm = np.argmax(self.reward_memory / self.count_memory)\n",
     "           reward = self.bandit.pull(best_arm)\n",
@@ -199,7 +197,7 @@
     "# Plot curves\n",
     "agent.plot_reward_vs_time_curve()\n",
     "agent.plot_arm_graph()\n",
-    "bandit.plot_cumulative_regret()\n"
+    "bandit.plot_cumulative_regret()"
    ]
   },
   {
